fix(ui): adjust card height for alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@
 .project-card {
     background-color: white;
     width: 30rem;
-    height: 12rem;
+    height: 13rem;
     border-radius: 24px;
     border-left: 10px solid orange;
     box-shadow: 0px 3px 10px rgba(85, 83, 83, 0.5); 
